# MusicPlayer

./: .gitignore  CMakeLists.txt  aicontroller.cpp  aicontroller.h  beatanalyzer.cpp  beatanalyzer.h  beatdetector.cpp  beatdetector.h  beatlyricwidget.cpp  beatlyricwidget.h  command.h  commanddispatcher.cpp  commanddispatcher.h  commandvalidator.cpp  commandvalidator.h  filescanner.cpp  filescanner.h  filescanworker.cpp  filescanworker.h  glassiconbutton.cpp  glassiconbutton.h  librarylistdelegate.cpp  librarylistdelegate.h  listwidget.cpp  listwidget.h  listwidget.ui  localruleengine.cpp  localruleengine.h  lrcparser.h  lyriclinerow.cpp  lyricscrollarea.cpp  lyricscrollarea.h  main.cpp  micoverlaywidget.cpp  musicplayer.cpp  musicplayer.h  musicplayer.ui  playercontroller.cpp  playercontroller.h  playprogressslider.cpp  (+12 more)
app/: musicplayer.cpp
commands/: commanddispatcher.h  commandvalidator.cpp  localruleengine.h
lyrics/: lyriclinerow.h
playback/: beatdetector.cpp  beatdetector.h  lrcparser.cpp  volumesafety.h
playui/: playprogressslider.h  playwidget.cpp  playwidget.ui  turntablealbumwidget.h
tools/: slice_player_icons.py
voice/: micoverlaywidget.h  voicechatdelegate.cpp  voicechatdelegate.h  voicedrawerscrim.cpp
